--- a/src/main/resources/static/css/quotation_items.css
+++ b/src/main/resources/static/css/quotation_items.css
@@ -266,7 +266,7 @@
 
 #subtotal-text{
     grid-column: 1;
-    font-family: 'Conamore Semi Bold', 'sans-serif';
+    font-family: 'Conamore Semi Bold', sans-serif;
     font-size: 1.5vh;
     letter-spacing: 1px;
     padding-left: 25px;
