--- a/src/main/resources/static/css/print.css
+++ b/src/main/resources/static/css/print.css
@@ -164,7 +164,6 @@
     border-bottom: 1px solid black;
     margin-left: 50px;
     margin-right: 40px;
-    height: auto;
 }
 
 #subtitle{
@@ -187,7 +186,6 @@
     border-bottom: 1px solid black;
     margin-left: 50px;
     margin-right: 40px;
-    height: auto;
 }
 
 #tax{
@@ -210,7 +208,7 @@
     height: auto;
     padding-bottom: 20px;
     margin-left: 50px;
-    margin-right: 40px;height: auto;
+    margin-right: 40px;
 }
 
 #subtitle-total{
@@ -243,7 +241,6 @@
     font-family: 'Conamore Bold', sans-serif;
     font-size: 2.5vw;
     color: #0D131A;
-    text-align: center;
     letter-spacing: 1px;
 }
 
@@ -324,7 +321,6 @@
         font-family: 'Conamore Bold', sans-serif;
         font-size: 5vw;
         color: #0D131A;
-        text-align: center;
         letter-spacing: 1px;
     }
     #buttons{
