--- a/src/main/resources/templates/cylinders.html
+++ b/src/main/resources/templates/cylinders.html
@@ -18,7 +18,6 @@
                 <button class="stage active" id="cylinder">Cilindraje</button>
             </div>
             <div class="rectangle-grid">
-                <table>
                     <tbody>
                         <tr th:each="cylinder : ${cylinders}">
                             <td>
@@ -33,8 +32,7 @@
                                 </form>
                             </td>
                         </tr>
-                    </tbody>
-                </table>
+                    </tbody>S
             </div>
         </div>
         <div class="loader-wrapper">
