--- a/src/main/resources/templates/admin_interface.html
+++ b/src/main/resources/templates/admin_interface.html
@@ -12,7 +12,7 @@
             <div class="menu-lateral">
                 <div class="text">¡Hola!</div>
                 <div class="perfil">
-                    <img src="../static/images/usuario.png" class="picture">
+                    <img src="../static/images/usuario.png" alt="" class="picture">
                     <span id="name-user">Alejandro</span>
                     <span id="role-user">Administrador</span>
                 </div>
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div id="logo-tg">
-                    <img src="https://topgearbogota.com/wp-content/uploads/2023/09/LogoTopGear.svg" id="logo">
+                    <img src="https://topgearbogota.com/wp-content/uploads/2023/09/LogoTopGear.svg" alt="" id="logo">
                 </div>
             </div>
 
