--- a/src/main/resources/templates/imprimir.html
+++ b/src/main/resources/templates/imprimir.html
@@ -65,7 +65,7 @@
         <a class="quotation-finish-button" href="https://wa.me/573502847357/?text=Quiero%20realizar%20una%20cotizacion" >Contactar Asesor</a>
     </div>              
     <div class="loader-wrapper">
-        <img class="loader" th:src="@{/images/login/carro-deportivo.png}">
+        <img class="loader" alt="" th:src="@{/images/login/carro-deportivo.png}">
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
