--- a/src/main/resources/templates/login_oficial.html
+++ b/src/main/resources/templates/login_oficial.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="loader-wrapper">
-        <img class="loader" th:src="@{/images/login/carro-deportivo.png}"></img>
+        <img class="loader" alt="" th:src="@{/images/login/carro-deportivo.png}"></img>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
