--- a/src/main/resources/templates/update_service.html
+++ b/src/main/resources/templates/update_service.html
@@ -31,7 +31,7 @@
                 <div class="cajas">
                     <form action="/item/updateItem" method="POST">
                         <div class="image">
-                            <img th:src="@{${item.image}}" alt="Item Image">
+                            <img th:src="@{${item.image}}" alt="">
                         </div>
                         <div class="info">
                             <div class="service-type-text">
