--- a/src/main/resources/templates/admin_items.html
+++ b/src/main/resources/templates/admin_items.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div id="logo-tg">
-                <img src="https://topgearbogota.com/wp-content/uploads/2023/09/LogoTopGear.svg" id="logo">
+                <img src="https://topgearbogota.com/wp-content/uploads/2023/09/LogoTopGear.svg" alt="" id="logo">
             </div>        
         </div>
 
@@ -43,7 +43,7 @@
             <div class="services-grid">
                 <div class="cajas" th:each="item : ${items}">
                     <div class="image">
-                        <img th:id="'img-' + ${item.getName()}" alt="Imagen de servicio">
+                        <img th:id="'img-' + ${item.getName()}" alt="">
                     </div>
                     <div class="info">
                         <div class="service-type-text" th:text="${item.getName()}"></div>
